--- a/realestate-client/src/Components/Add properties/BasicInfo.css
+++ b/realestate-client/src/Components/Add properties/BasicInfo.css
@@ -1,6 +1,6 @@
-h2{
-    margin-top: 6%;
-    margin-left: 20%;
+
+hr{
+    margin-top: 10%;
 }
 
 
@@ -13,12 +13,13 @@ h2{
     display: flex;
     justify-content: space-around;
     margin-left: 20%;
-    margin-top: 2%;
+
 
 }
 
 .basic{
     font-weight: bolder;
+    padding-top: 2%;
 }
 .basic1{
     text-decoration: none;
@@ -202,6 +203,8 @@ h2{
     font-weight: bolder;
     color: white;
     font-size: large;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    border: 0px;
 }
 
 .save2{
@@ -216,16 +219,33 @@ h2{
     font-weight: bolder;
     color: white;
     font-size: large;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    border: 0px;
 }
 
 .basicform{
-    background-color: rgb(235, 228, 228);
-    width: 76%;
-    margin-left: 20%;
+    margin-left: 5%;
     border-radius: 10px;
     height: 550px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
 
 .ppd-Package{
     margin-left: 5%;
+}
+
+.main_section .nav_section .navbar .nav_one{
+    background-color: rgb(86, 191, 247);
+    height: 60px;
+    width: 200px;
+    margin-top: -20px;
+    border-radius: 60px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    text-align: center;
+}
+
+.main_section .nav_section .navbar .nav_one .basic{
+    text-align: center;
+    margin-top: 17px;
+    color: white;
 }
