--- a/realestate-client/src/Components/Add properties/locationinfo.css
+++ b/realestate-client/src/Components/Add properties/locationinfo.css
@@ -1,9 +1,9 @@
 .locationform{
-    background-color: rgb(235, 228, 228);
-    width: 76%;
-    margin-left: 20%;
+    width: 90%;
+    margin-left: 6%;
     border-radius: 10px;
     height: 550px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 
@@ -15,16 +15,16 @@
 }
 
 .email{
-    width: 470px;
+    width: 420px;
     height: 26px;
-    border-radius: 10px;
+    border-radius: 10px solid gray;
     font-weight: bold;
     font-size: large;
     color: grey;
 }
 
 .add{
-    width: 470px;
+    width: 420px;
     height: 26px;
     border-radius: 10px;
     font-weight: bold;
@@ -45,7 +45,7 @@
 }
 
 .select14{
-    width: 500px;
+    width: 450px;
     height: 50px;
     border-radius: 10px;
     font-weight: bold;
@@ -54,7 +54,7 @@
 }
 
 .select15{
-    width: 500px;
+    width: 450px;
     height: 50px;
     border-radius: 10px;
     font-weight: bold;
@@ -74,7 +74,7 @@
 }
 
 .select16{
-    width: 500px;
+    width: 450px;
     height: 50px;
     border-radius: 10px;
     font-weight: bold;
@@ -83,7 +83,7 @@
 }
 
 .land{
-    width: 470px;
+    width: 420px;
     height: 26px;
     border-radius: 10px;
     font-weight: bold;
@@ -103,7 +103,7 @@
 }
 
 .latitude{
-    width: 470px;
+    width: 420px;
     height: 26px;
     border-radius: 10px;
     font-weight: bold;
@@ -112,7 +112,7 @@
 }
 
 .longitude{
-    width: 470px;
+    width: 420px;
     height: 26px;
     border-radius: 10px;
     font-weight: bold;
@@ -127,7 +127,7 @@
 .prev3{
     border-radius: 4em / 3em;
     padding: 20px;
-    width: 16%;
+    width: 14%;
     height: 60px;
     background-color: rgb(69, 178, 233);
     margin-left: 30%;
@@ -135,4 +135,22 @@
     font-weight: bolder;
     color: white;
     font-size: large;
+    border: 0px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.main_section .nav_section .navbar .nav_four{
+    background-color: rgb(86, 191, 247);
+    height: 60px;
+    width: 200px;
+    margin-top: -20px;
+    border-radius: 60px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    text-align: center;
+}
+
+.main_section .nav_section .navbar .nav_four .loc{
+    text-align: center;
+    margin-top: 17px;
+    color: white;
 }
