--- a/realestate-client/src/Components/header_sidebar/Header.css
+++ b/realestate-client/src/Components/header_sidebar/Header.css
@@ -3,33 +3,25 @@ body{
     width: 100%;
     background-color: white;
 }
-.container{
-    display: flex;
-   flex-direction: row;
+
+.sidebar{
+    width: 20%;
+    height: 700px;
+    background-color: #d4ece8;
+    margin-left: -80%;
+    padding-bottom: 60%;
    
-   width: 100%;
 }
 
-.container .sidebar{
-        border: 1px solid #d4ece8;
-        height:98%;
-        width: 370px;
-        margin-right: auto;
-        margin-bottom: 0px;
-        margin-top: -12px;
-        background-color: #d4ece8;
-        padding: 30px 0;
+.side{
+  margin-left: 5%;
+  margin-top: 120%;
+}
+/* border: 4px solid#d4ece8; */
+
+.content{
+    margin-top: 10%;
+    color: gray;
+    line-height: 350%;
 }
 
-.container .main_content{
-    width: 100%;
-    
-    margin-left: -4px;
-    margin-top: -4px;
-    margin-bottom: auto;
-}
-.container .main_content .header{
-    padding: 60px;
-    background: #fff;
-    border: 4px solid#d4ece8;
-}
