Completed frontend and backend of login and signup

--- a/realestate-client/src/Components/Signup-Login/Signup.css
+++ b/realestate-client/src/Components/Signup-Login/Signup.css
@@ -12,15 +12,15 @@ html{
 body{
     height: 100%;
     width: 100%;
-    background-color: #e0f8eb;
 }
 .S-container{
-    height: 98vh;
+    height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #e0f8eb;
 }
 
 .S-formDiv{
@@ -86,10 +86,10 @@ input{
 
 #S-afterForm{
     margin-top: 1.5rem;
-    font-size: 0.9rem;
+    font-size: 1rem;
 }
 
 input, select, textarea{
-    color: #ff0000;
+    color: #030202;
     font-weight: 500;
 }
