--- a/realestate-client/src/Components/Signup-Login/Login.css
+++ b/realestate-client/src/Components/Signup-Login/Login.css
@@ -12,18 +12,27 @@ html{
 body{
     height: 100%;
     width: 100%;
-    background-color: #e0f8eb;
 }
 .container{
-    height: 98vh;
+    height: 90vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* background-color: #e0f8eb; */
+}
+.L-container{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #e0f8eb;
 }
 
-.formDiv{
+.L-formDiv{
     padding: 1.3rem 0.8rem;
     background-color: white;
     width: 28vw;
@@ -31,7 +40,7 @@ body{
 
 }
 
-.formDiv *{
+.L-formDiv *{
     margin: 0.8rem 0rem;
     display: flex;
     flex-direction: column;
@@ -40,10 +49,10 @@ body{
     text-align: center;
 }
 
-.formDiv h1{
+.L-formDiv h1{
     color: rgb(71 85 164);
 }
-.formDiv p{
+.L-formDiv p{
     margin-top: 2rem;
     color: #8e8c8c;
     font-size: 0.9rem;
@@ -55,20 +64,20 @@ input{
     border-radius: 0.3rem;
 }
 
-#userid{
+#L-userid{
     margin-top: 3rem;
     text-align: start;
     border: 2px solid #e5e1e1;
 }
 
-#password{
+#L-password{
     text-align: start;
     margin-bottom: 2.7rem;
     border: 2px solid #e5e1e1;
 
 }
 
-#signin{
+#L-signin{
     padding: 0.7rem;
     width: 22vw;
     border: none;
@@ -78,13 +87,13 @@ input{
     /* border: none; */
 }
 
-.signup{
+.L-signup{
     text-decoration: none;
     color: rgb(71 85 164);
     font-weight: bold;
 }
 
-#afterForm{
+#L-afterForm{
     margin-top: 1.5rem;
     font-size: 0.9rem;
 }
