--- a/realestate-client/src/Components/property/Property.css
+++ b/realestate-client/src/Components/property/Property.css
@@ -1,1 +1,318 @@
+.row_search_bar{
+    margin-left: 22.5%;
+    margin-bottom: auto;
+    margin-top: -46%;
+    width: 410px;
+    height: 65px;
+    border: none;
+}
+.boxContainer{
+    /* margin: auto; */
+    position: relative;
+    width: 390px;
+    height: 65px;
+    border: none;
+    border-radius: 50px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+}
+.elementsContainer{
+    width: 95%;
+    height: 100%;
+    margin-left: 30px;
+    /* vertical-align: middle; */
+}
+.search{
+    height: 100%;
+    width: 100%;
+    padding: 0px 5px;
+    border-radius: 50px;
+    font-size: 1.2em;
+    color: black;
+    font-weight: 500;
+    outline: none;
+    border:none;
+    text-align: left;
 
+
+    
+}
+.search:focus{
+    outline: none;
+}
+.stand{
+    margin-left: 400%;
+    font-size: 36px;
+    color: rgb(234, 234, 234);
+    font-weight: lighter;
+    width: -100px;
+}
+.search_btn{
+    margin-left: 20px;
+    margin-right: 25px;
+    outline: none;
+    border: none;
+    margin-top: 5px;
+    background-color: transparent;
+}
+.search_icon{
+    font-size: 26px;
+    color: #35b4fd;
+    background-color: transparent;
+    margin-left: 40px;
+}
+.button_div{
+    margin-left: 85%;
+    margin-right: 20px;
+    margin-top: -65px;
+    border: none;
+    width: 180px;
+    height: 65px;
+    border-radius: 55px;
+    background-color: #65ace6;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.button_div button{
+    font-size: 19px;
+    width: 200px;
+    background-color: transparent;
+    border: none;
+    margin-left: -10px;
+    margin-right: 20px;
+    text-align: center;
+    color: white;
+    font-weight: 640;
+    margin-top: 10px;
+}
+
+.button_div button .text_btn{
+    margin-top: 15px;
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+.button_div button .plus{
+    margin-right: 8px;
+    margin-top: 90px;
+    font-size: 1.5em;
+}
+.main_row{
+    border: none;
+    display: flex;
+    flex-direction: row;
+    /* align-content:space-around; */
+    width: 1123px;
+    height: 60px;
+    margin-top: 40px;
+    margin-left: 344px;
+    border-radius: 10px;
+    align-items: center;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+}
+
+.property_row{
+    border: none;
+    display: flex;
+    flex-direction: row;
+    /* align-content:space-around; */
+    width: 1123px;
+    height: 60px;
+    margin-top: 15px;
+    margin-left: 344px;
+    border-radius: 10px;
+    align-items: center;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+}
+.head_column_one{
+    margin-left: 40px;
+    margin-right: 40px;
+    height: auto;
+    width: auto;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:#2a4da2;
+}
+.head_column_two{
+    margin-left: 20px;
+    margin-right: 40px;
+    width: auto;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:#2a4da2;
+}
+.head_column_three{
+    margin-left: 17px;
+    margin-right: 40px;
+    width: auto;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:#2a4da2;
+}
+.head_column_four{
+    margin-left: 30px;
+    margin-right: 50px;
+    width: auto;
+     border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:#2a4da2;}
+.head_column_five{
+    margin-left: 30px;
+    margin-right: 40px;
+    width: auto;
+     border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:#2a4da2;}
+.head_column_six{
+    margin-left: 17px;
+    margin-right: 40px;
+    width: auto;
+     border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:#2a4da2;}
+.head_column_seven{
+    margin-left: 30px;
+    margin-right: 40px;
+    width: auto;
+     border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:#2a4da2;}
+.head_column_eight{
+    margin-left: 30px;
+    margin-right: 40px;
+    width: auto;
+     border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:#2a4da2;}
+.head_column_nine{
+    margin-left: 17px;
+    margin-right: 50px;
+    width: auto;
+     border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:#2a4da2;
+}
+/* property column style */
+.property_column_one{
+    margin-left: 40px;
+    margin-right: 30px;
+    height: auto;
+    width: auto;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:black;
+}
+.property_column_two{
+    margin-left: 40px;
+    margin-right: 40px;
+    height: auto;
+    width: auto;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:black;
+}
+.property_column_two .image{
+    font-size: 1.5em;
+    color: gray;
+}
+.property_column_three{
+    margin-left: 40px;
+    margin-right: 55px;
+    height: auto;
+    width: auto;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:black;
+}
+.property_column_four{
+    margin-left: 30px;
+    margin-right: 40px;
+    height: auto;
+    width: auto;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:black;
+}
+.property_column_five{
+    margin-left: 20px;
+    margin-right: 40px;
+    height: auto;
+    width: auto;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:black;
+}
+.property_column_six{
+    margin-left: 40px;
+    margin-right: 30px;
+    height: auto;
+    width: auto;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:black;
+}
+.property_column_seven{
+    margin-left: 40px;
+    margin-right: 30px;
+    height:35px;
+    width: 90px;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:black;
+    background-color:#f7f6ee;
+    text-align: center;
+    border-radius: 10px;
+}
+.property_column_seven .btn{
+    font-size: 20px;
+    background-color: transparent;
+    text-align: center;
+    color: #2a4da2;
+    border: none;
+    margin-top: 5px;
+    font-weight: 600;
+}
+.property_column_eight{
+    margin-left: 40px;
+    margin-right: 30px;
+    height: auto;
+    width: auto;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:black;
+}
+.property_column_nine{
+    margin-left: 40px;
+    margin-right: 40px;
+    height: auto;
+    width: auto;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color:black;
+}
+.property_column_nine .show{
+    margin-right: 10px;
+    font-size: 1.3em;
+    color: gray;
+}
+.property_column_nine .edit{
+    margin-left: 8px;
+    font-size: 1.3em;
+    color: gray;
+}
