add properties added

--- a/realestate-client/src/Components/Add properties/generalinfo.css
+++ b/realestate-client/src/Components/Add properties/generalinfo.css
@@ -125,3 +125,8 @@
     margin-top: 17px;
     color: white;
 }
+
+/* .upload_box input[type="file" i]{
+    display: none;
+    visibility: hidden;
+} */
