--- a/realestate-client/src/Components/Add properties/propertDetails.css
+++ b/realestate-client/src/Components/Add properties/propertDetails.css
@@ -49,7 +49,7 @@ body{
     margin-left: 10px;
     /* border: 1px solid red; */
     margin-top: 30px;
-    height: 750px;
+    height: 940px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
 .form_row{
@@ -60,21 +60,21 @@ body{
 .form_row_one{
     display: flex;
     flex-direction: row;
-    margin-left: 150px;
-    margin-top: 10px;
+    margin-left: 4%;
+    margin-top: 3%;
    
 }
 .form_row_one .breath{
-    margin-left: 80px;
+    margin-left: 4%;
 }
 .form_row_two{
     display: flex;
     flex-direction: row;
-    margin-left: 150px;
-    margin-top: 10px;
+    margin-left: 4%;
+    margin-top: 3%;
 }
 .form_row_two .area-unit{
-    margin-left: 80px;
+    margin-left: 4%;
 }
 .areaunit{
     width: 335px;
@@ -84,8 +84,8 @@ body{
 .form_row_three{
     display: flex;
     flex-direction: row;
-    margin-left: 150px;
-    margin-top: 10px;
+    margin-left: 4%;
+    margin-top: 3%;
 }
 .bhk{
     width: 335px;
@@ -102,8 +102,8 @@ body{
 .form_row_four{
     display: flex;
     flex-direction: row;
-    margin-left: 150px;
-    margin-top: 10px;
+    margin-left: 4%;
+    margin-top: 3%;
 }
 .attach{
     width: 335px;
@@ -119,38 +119,35 @@ body{
 .form_row_five{
     display: flex;
     flex-direction: row;
-    margin-left: 150px;
-    margin-top: 10px;
+    margin-left: 4%;
+    margin-top: 3%;
 }
 .furnish{
-    width: 335px;
-    height: 40px;
+    width: 510px;
+    height: 50px;
 }
 .carparking{
     margin-left: 80px;
 }
 .car{
-    width: 335px;
-    height: 40px;
+    width: 510px;
+    height: 50px;
 }
 .form_row_six{
     display: flex;
     flex-direction: row;
-    margin-left: 150px;
-    margin-top: 10px;
+    margin-left: 4%;
+    margin-top: 3%;
 }
-.lift{
-    width: 335px;
-    height: 40px;
-}
+
 .electricity{
     margin-left: 80px;
 }
 .form_row_seven{
     display: flex;
     flex-direction: row;
-    margin-left: 150px;
-    margin-top: 10px;
+    margin-left: 4%;
+    margin-top: 3%;
 }
 .facing{
     width: 335px;
@@ -158,31 +155,35 @@ body{
 }
 
 .len{
-    font-weight: bold;
-    color: gray;
+    font-weight: bolder;
+    color: grey;
+    font-size: medium;
 }
 
 .length{
-    width: 380px;
-    height: 28px;
+    width: 485px;
+    height: 26px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
+    border: 1px solid  rgb(130, 158, 122);
 }
 
 .breath{
-    font-weight: bold;
-    color: gray;
+    font-weight: bolder;
+    font-size: medium;
+    color: grey;
 }
 
 .bre{
-    width: 380px;
-    height: 28px;
+    width: 485px;
+    height: 26px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
+    border: 1px solid  rgb(130, 158, 122);
 }
 
 .Total-area{
@@ -191,12 +192,13 @@ body{
 }
 
 .area1{
-    width: 380px;
-    height: 28px;
+    width: 485px;
+    height: 26px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
+    border: 1px solid  rgb(130, 158, 122);
 }
 
 .area-unit{
@@ -205,26 +207,29 @@ body{
 }
 
 .areaunit{
-    width: 404px;
-    height: 56px;
+    width: 510px;
+    height: 50px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
-    color: grey;
+    font-weight: 500;
+    font-size: 16px;
+    color:  grey;
+    border: 1px solid  rgb(130, 158, 122);
 }
 
 .noofBHK{
     font-weight: bold;
     color: gray;
+    margin-right: -3%;
 }
 
 .bhk{
-    width: 404px;
-    height: 56px;
+    width: 510px;
+    height: 50px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
-    color: grey;
+    font-weight: 500;
+    font-size: 16px;
+    color: gray;
+    border: 1px solid  rgb(130, 158, 122);
 }
 
 .nooffloor{
@@ -233,11 +238,11 @@ body{
 }
 
 .floor{
-    width: 404px;
-    height: 56px;
+    width: 510px;
+    height: 50px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
 }
 
@@ -247,25 +252,26 @@ body{
 }
 
 .attach{
-    width: 404px;
-    height: 56px;
+    width: 510px;
+    height: 50px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
 }
 
 .western{
     font-weight: bold;
     color: gray;
+    margin-left: 4%;
 }
 
 .toilet{
-    width: 404px;
-    height: 56px;
+    width: 510px;
+    height: 50px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
 }
 
@@ -275,25 +281,26 @@ body{
 }
 
 .furnish{
-    width: 404px;
-    height: 56px;
+    width: 510px;
+    height: 50px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
 }
 
 .carparking{
     font-weight: bold;
     color: gray;
+    margin-left: 4%;
 }
 
 .car{
-    width: 404px;
-    height: 56px;
+    width: 510px;
+    height: 50px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;  
 }
 
@@ -303,26 +310,28 @@ body{
 }
 
 .lift{
-    width: 404px;
-    height: 56px;
+    width: 510px;
+    height: 50px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;  
 }
 
 .electricity{
     font-weight: bold;
     color: gray;
+    margin-left: 4%;
 }
 
 .ele{
-    width: 380px;
-    height: 28px;
+    width: 485px;
+    height: 26px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
+    border: 1px solid  rgb(130, 158, 122);
 }
 
 .face{
@@ -331,11 +340,11 @@ body{
 }
 
 .facing{
-    width: 404px;
-    height: 56px;
+    width: 510px;
+    height: 50px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;  
 }
 
