--- a/realestate-client/src/Components/header_sidebar/Sidebar.css
+++ b/realestate-client/src/Components/header_sidebar/Sidebar.css
@@ -34,9 +34,10 @@ body{
     margin-left: -40px;
 }
 .logo{
-    font-family:"Ebrima";
+    font-family:"Candara";
     margin-top: -15px;
     margin-bottom: 48px;
+    margin-left: -25px;
 }
 .content_row{
     display: flex;
