--- a/realestate-client/src/Components/property/Property.css
+++ b/realestate-client/src/Components/property/Property.css
@@ -53,6 +53,7 @@
     border: none;
     margin-top: 5px;
     background-color: transparent;
+    /* background-color: #d4ece8 */
 }
 .btn_add{
     cursor: pointer;
