--- a/realestate-client/src/Components/property/Property.css
+++ b/realestate-client/src/Components/property/Property.css
@@ -23,12 +23,12 @@
 }
 .search{
     height: 100%;
-    width: 100%;
+    width: 110%;
     padding: 0px 5px;
     border-radius: 50px;
-    font-size: 1.2em;
+    font-size: 16px;
     color: black;
-    font-weight: 500;
+    font-weight: 700;
     outline: none;
     border:none;
     text-align: left;
@@ -65,6 +65,9 @@
     margin-left: 40px;
     cursor: pointer;
 }
+.search_icon:active{
+    color: red;
+}
 .button_div{
     margin-left: 85%;
     margin-right: 20px;
@@ -76,6 +79,9 @@
     background-color: #65ace6;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     cursor: pointer;
+}
+.button_div:active{
+    background-color: #5677c9;
 }
 
 .button_div button{
@@ -130,7 +136,7 @@
 }
 .head_column_one{
     margin-left: 40px;
-    margin-right: 40px;
+    margin-right: 55px;
     height: auto;
     width: auto;
     border: none;
@@ -140,7 +146,7 @@
 }
 .head_column_two{
     margin-left: 20px;
-    margin-right: 40px;
+    margin-right: 30px;
     width: auto;
     border: none;
     font-size: 17px;
@@ -149,7 +155,7 @@
 }
 .head_column_three{
     margin-left: 17px;
-    margin-right: 40px;
+    margin-right: 30px;
     width: auto;
     border: none;
     font-size: 17px;
@@ -173,7 +179,7 @@
     font-weight: 600;
     color:#2a4da2;}
 .head_column_six{
-    margin-left: 17px;
+    margin-left: 27px;
     margin-right: 40px;
     width: auto;
      border: none;
@@ -208,17 +214,17 @@
 /* property column style */
 .property_column_one{
     margin-left: 40px;
-    margin-right: 12px;
+    margin-right: 6px;
     height: auto;
-    width: auto;
+    width: 110px;
     border: none;
     font-size: 17px;
     font-weight: 600;
     color:black;
 }
 .property_column_two{
-    margin-left: 40px;
-    margin-right: 43px;
+    margin-left: 20px;
+    margin-right: 23px;
     height: auto;
     width: auto;
     border: none;
@@ -232,47 +238,50 @@
 }
 .property_column_three{
     margin-left: 40px;
-    margin-right: 55px;
+    margin-right: 20px;
     height: auto;
-    width: auto;
+    width: 75px;
     border: none;
     font-size: 17px;
     font-weight: 600;
     color:black;
 }
 .property_column_four{
-    margin-left: 30px;
-    margin-right: 35px;
+    margin-left: 10px;
+    margin-right: 20px;
     height: auto;
-    width: auto;
-    border: none;
+    width: 130px;
+    border: none;;
     font-size: 17px;
     font-weight: 600;
     color:black;
+    text-align: center;
 }
 .property_column_five{
-    margin-left: 20px;
-    margin-right: 26px;
+    margin-left: 24px;
+    margin-right: 10px;
     height: auto;
-    width: auto;
-    border: none;
+    width: 110px;
+    border: none;;
     font-size: 17px;
     font-weight: 600;
     color:black;
+    text-align: left;
 }
 .property_column_six{
-    margin-left: 40px;
-    margin-right: 30px;
+    margin-left: 5px;
+    margin-right: 20px;
     height: auto;
-    width: auto;
-    border: none;
+    width: 50px;
+    border: none;;
     font-size: 17px;
     font-weight: 600;
     color:black;
+    text-align: center;
 }
 .property_column_seven{
-    margin-left: 40px;
-    margin-right: 30px;
+    margin-left: 30px;
+    margin-right: 20px;
     height:35px;
     width: 90px;
     border: none;
@@ -293,32 +302,34 @@
     font-weight: 600;
 }
 .property_column_eight{
-    margin-left: 40px;
-    margin-right: 35px;
+    margin-left: 30px;
+    margin-right: 20px;
     height: auto;
-    width: auto;
-    border: none;
+    width: 70px;
+    border: none;;
     font-size: 17px;
     font-weight: 600;
     color:black;
+    text-align: center;
 }
 .property_column_nine{
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
     height: auto;
-    width: auto;
-    border: none;
+    width: 100px;
+    border: none;;
     font-size: 17px;
     font-weight: 600;
     color:black;
 }
 .property_column_nine .show{
-    margin-right: 10px;
+    margin-left: 20px;
+    margin-right: 8px;
     font-size: 1.3em;
     color: gray;
 }
 .property_column_nine .edit{
-    margin-left: 8px;
+    margin-left: 4px;
     font-size: 1.3em;
     color: gray;
 }
