--- a/realestate-client/src/Components/Add properties/generalinfo.css
+++ b/realestate-client/src/Components/Add properties/generalinfo.css
@@ -2,7 +2,7 @@
     width: 90%;
     margin-left: 6%;
     border-radius: 10px;
-    height: 550px;
+    height: 620px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
 
@@ -121,12 +121,11 @@
     color: white;
 }
 
-.save3{
+.save2{
     border-radius: 4em / 4em;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 20px;
     width: 18%;
-    height: 60px;
+    height: 58px;
     background-color: white;
     background-color: rgb(71, 82, 163);
     margin-left: 5%;
@@ -143,3 +142,45 @@
     display: none;
     visibility: hidden;
 } */
+
+.input-file input[type="file" i]::-webkit-file-upload-button{
+    -webkit-appearance: none;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 0px;
+    font-display: none;
+    background-color: rgb(86, 191, 247);
+    box-shadow: 3px 3px 3px rgb(157, 157, 157);
+    color:  rgb(86, 191, 247);
+}
+
+.input-file{
+    margin-left: 5%;
+    margin-top: 4%;
+}
+
+.imageicon{
+    height: 40px;
+    width: 40px;
+    color: white;
+    position: absolute;
+    top: 40px;
+    left: 92px;
+    filter: drop-shadow(1rem 1rem 1rem grey);
+}
+
+.container-image{
+   position: relative;
+   margin-top: -2.5%;
+}
+
+.addphoto{
+    color: gray;
+    position: absolute;
+    top: 50px;
+    left: 168px;
+    width: 30%;
+    height: 35px;
+    background-color: white;
+}
