--- a/realestate-client/src/Components/Add properties/locationinfo.css
+++ b/realestate-client/src/Components/Add properties/locationinfo.css
@@ -50,7 +50,7 @@
 }
 
 .select14{
-    width: 450px;
+    width: 475px;
     height: 50px;
     border-radius: 10px;
     font-weight: 500;
@@ -60,16 +60,16 @@
 }
 
 .select15{
-    width: 450px;
+    width: 475px;
     height: 50px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
 }
 
 .area{
-    margin-left: 5%;
+    margin-left: 2%;
 }
 
 .box14{
@@ -77,28 +77,31 @@
     margin-left: 5%;
     margin-top: 3%;
     font-weight: bold;
+    color: gray;
 }
 
 .select16{
-    width: 450px;
+    width: 475px;
     height: 50px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
+    
 }
 
 .land{
-    width: 420px;
+    width: 450px;
     height: 26px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
+    border: 1px solid  rgb(130, 158, 122);
 }
 
 .landmark{
-    margin-left: 5%;
+    margin-left: 2%;
 }
 
 .box15{
@@ -106,31 +109,34 @@
     margin-left: 5%;
     margin-top: 3%;
     font-weight: bold;
+    color: gray;
 }
 
 .latitude{
-    width: 420px;
+    width: 450px;
     height: 26px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
+    border: 1px solid  rgb(130, 158, 122);
 }
 
 .longitude{
-    width: 420px;
+    width: 450px;
     height: 26px;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: large;
+    font-weight: 500;
+    font-size: 16px;
     color: grey;
+    border: 1px solid  rgb(130, 158, 122);
 }
 
 .long{
-    margin-left: 5%;
+    margin-left: 2%;
 }
 
-.prev3{
+.prev2{
     border-radius: 4em / 3em;
     padding: 20px;
     width: 14%;
