--- a/realestate-client/src/Components/Logout/Logout.css
+++ b/realestate-client/src/Components/Logout/Logout.css
@@ -6,6 +6,8 @@
     color: white;
     font-weight: bold;
     cursor: pointer;
+    margin-left: -20px;
+    margin-top: 25px;
 }
 
 #logoutBtn:hover{
