--- a/realestate-client/src/Components/header_sidebar/Sidebar.css
+++ b/realestate-client/src/Components/header_sidebar/Sidebar.css
@@ -7,7 +7,7 @@ body{
 
 .sidebar{
     width: 20%;
-    height: 700px;
+    height: auto;
     background-color: #d4ece8;
     margin-left: -80%;
     padding-bottom: 60%;
@@ -19,7 +19,7 @@ body{
   margin-top: 120%; */
   display: flex;
   flex-direction: column;
-  margin-top: 130%;
+  margin-top: 184%;
   margin-left: 30%;
 }
 /* border: 4px solid#d4ece8; */
