--- a/realestate-client/src/Components/property/Property.css
+++ b/realestate-client/src/Components/property/Property.css
@@ -65,6 +65,9 @@
     margin-left: 40px;
     cursor: pointer;
 }
+.search_icon:hover{
+    color: blue;
+}
 .search_icon:active{
     color: red;
 }
@@ -79,6 +82,9 @@
     background-color: #65ace6;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     cursor: pointer;
+}
+.button_div:hover{
+    background-color: #59a0e7;
 }
 .button_div:active{
     background-color: #5677c9;
