username and id added to header

--- a/realestate-client/src/Components/Signup-Login/Login.css
+++ b/realestate-client/src/Components/Signup-Login/Login.css
@@ -84,6 +84,7 @@ input{
     border-radius: 0.3rem;
     background-color:rgb(71 85 164);
     color: white;
+    cursor: pointer;
     /* border: none; */
 }
 
