--- a/realestate-client/src/Components/Signup-Login/Signup.css
+++ b/realestate-client/src/Components/Signup-Login/Signup.css
@@ -79,6 +79,7 @@ input{
     border-radius: 0.3rem;
     background-color:rgb(71 85 164);
     color: white;
+    cursor: pointer;
     /* border: none; */
 }
 
