--- a/realestate-client/src/Components/Add properties/generalinfo.css
+++ b/realestate-client/src/Components/Add properties/generalinfo.css
@@ -137,22 +137,35 @@
     border: 0px;
     text-align: center;
 }
+.save2:hover{
+    background-color: rgb(4, 4, 78);
+    cursor: pointer;
+}
+.save2:active{
+    color: red;
+}
 
-/* .upload_box input[type="file" i]{
-    display: none;
-    visibility: hidden;
-} */
+.input-file input[type="file" i]{
+    font-size: 16px;
+    color: rgb(228, 17, 17);
+    /* padding-left: 20px; */
+    
+}
 
 .input-file input[type="file" i]::-webkit-file-upload-button{
     -webkit-appearance: none;
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
     border: 0px;
-    font-display: none;
+    /* font-display: none; */
     background-color: rgb(86, 191, 247);
     box-shadow: 3px 3px 3px rgb(157, 157, 157);
+    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; */
     color:  rgb(86, 191, 247);
+    cursor: pointer;
+    /* font-size: 2rem; */
+    /* padding-left: 10px; */
 }
 
 .input-file{
@@ -165,14 +178,14 @@
     width: 40px;
     color: white;
     position: absolute;
-    top: 40px;
-    left: 92px;
+    top: 36px;
+    left: 89px;
     filter: drop-shadow(1rem 1rem 1rem grey);
 }
 
 .container-image{
    position: relative;
-   margin-top: -2.5%;
+   margin-top: -2.8%;
 }
 
 .addphoto{
@@ -183,4 +196,13 @@
     width: 30%;
     height: 35px;
     background-color: white;
+    /* border: 1px solid red; */
+    margin-left: -10px;
+    margin-top: -14px;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 10px;
 }
+/* .image_name{
+   
+} */
