--- a/realestate-client/src/Components/property/Property.css
+++ b/realestate-client/src/Components/property/Property.css
@@ -79,12 +79,13 @@
     width: 180px;
     height: 65px;
     border-radius: 55px;
-    background-color: #65ace6;
+    background-color: rgb(5, 112, 179);
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     cursor: pointer;
 }
 .button_div:hover{
-    background-color: #59a0e7;
+    
+    background-color: #137ed5;
 }
 .button_div:active{
     background-color: #5677c9;
