--- a/realestate-client/src/Components/property/Property.css
+++ b/realestate-client/src/Components/property/Property.css
@@ -243,6 +243,15 @@
     font-size: 1.5em;
     color: gray;
 }
+.image:hover{
+    cursor: pointer;
+    color: rgb(29, 17, 190);
+
+}
+.image:active{
+    color: red;
+
+}
 .property_column_three{
     margin-left: 40px;
     margin-right: 20px;
